--- a/src/stylesheets/navBar.css
+++ b/src/stylesheets/navBar.css
@@ -24,6 +24,15 @@ menu li{
   width: 180px;
 }
 
+#carrito_compras:hover{
+  background-color: white
+}
+
+#carrito_compras img{
+  width: 35px;
+  
+}
+
 @media (hover:hover){
   menu li:hover{
     background-color: rgb(0, 187, 240, 40%);
